[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "social_modules"
version = "0.2.1"
authors = [
  { name="fernand0", email="fernand0@elmundoesimperfecto.com" },
]
description = "A package to manage interaction with several social sites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC License",
    "Operating System :: OS Independent",
]
dependencies = [
		'atproto',
		'colorama',
		'tweepy',
		'facebook-sdk',
		'requests',
		'bs4',
		'lxml',
		'dateparser',
		'google-api-python-client',
		'google-auth-oauthlib',
		'oauth2',
		'oauth2client',
		'distance',
		'ebooklib',
		'sievelib',
		'gitpython',
		'keyring',
		'click',
		'feedparser',
		'pdfrw',
		'python-crontab',
		'tmdbsimple',
		'imgurpython',
		'linkedin-api-client',
		'Mastodon.py',
		'medium',
		'pocket-api',
		'pytumblr',
		'telepot',
		'gitterpy',
		'slack_sdk',
		'readability-lxml',
		'readabilipy'

]

[project.urls]
"Homepage" = "https://github.com/fernand0/socialModules"
"Bug Tracker" = "https://github.com/fernand0/socialModules/issues"
