[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "social_modules"
version = "0.2.2"
authors = [
  { name="fernand0", email="fernand0@elmundoesimperfecto.com" },
]
description = "A package to manage interaction with several social sites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC License",
    "Operating System :: OS Independent",
]
dependencies = [
		'aiohttp>=3.9.0', # Added to ensure compatible frozenlist
		'atproto',
		'colorama',
		'flickrapi',
		'tweepy',
		'facebook-sdk',
		'requests',
		'bs4',
		'lxml',
		'dateparser',
		'google-api-python-client',
		'google-auth-oauthlib',
		'oauth2',
		'oauth2client',
		'distance',
		'ebooklib',
		'sievelib',
		'six',
		'gitpython',
		'keyring',
		'click',
		'feedparser',
		'pdfrw',
		'praw',
		'python-crontab',
		'tmdbsimple',
		'imgurpython',
		'lxml',
		'linkedin-api-client',
		'Mastodon.py',
		'medium',
		'pocket-api',
		'pytumblr',
		'six',
		'telepot',
		'gitterpy',
		'setuptools',
		'slack_sdk',
		'readability-lxml',
		'readabilipy',
		'pycurl',
		'instapaper'

]

[project.urls]
"Homepage" = "https://github.com/fernand0/socialModules"
"Bug Tracker" = "https://github.com/fernand0/socialModules/issues"
