[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "social_modules"
version = "0.3.0"
authors = [
  { name="fernand0", email="fernand0@elmundoesimperfecto.com" },
]
description = "A package to manage interaction with several social sites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC License",
    "Operating System :: OS Independent",
]
dependencies = [
		'aiohttp', # >=3.9.0', # Added to ensure compatible frozenlist
		'atproto',
		'colorama',
		'flickrapi',
		'tweepy',
		'facebook-sdk',
		'filelock',
		'requests',
		'bs4',
		'lxml',
		'dateparser',
		'google-api-python-client',
		'google-auth-oauthlib',
		'oauth2',
		'oauth2client',
		'distance',
		'ebooklib',
		'sievelib',
		'six',
		'gitpython',
		'keyring',
		'click',
		'feedparser',
		'pdfrw',
		'praw',
		'pycurl',
		'python-crontab',
		'tmdbsimple',
		'imgurpython',
		'lxml',
		'linkedin-api-client',
		'Mastodon.py',
		'medium',
		'pocket-api',
		'pytumblr',
		'six',
		'telepot',
		'gitterpy',
		'setuptools',
		'slack_sdk',
		'readability-lxml',
		'readabilipy',
		'pycurl',
		'instapaper'

]

[project.urls]
"Homepage" = "https://github.com/fernand0/socialModules"
"Bug Tracker" = "https://github.com/fernand0/socialModules/issues"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
select = ["E", "F"]
line-length = 88

# Allow fix for all enabled rules (when possible).
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "PGH", "PIE", "PL", "PT", "PYI", "RUF", "S", "SIM", "UP", "W", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Allow unused variables when they start with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
# Allow print and f-strings in examples and test files
"examples/*" = ["T201", "T202", "UP032"]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["src/socialModules/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
